# RP2350B-DIP40

./: .gitignore  LICENSE
include/boards/: hanyazou_rp2350b_dip40.h
kicad/: Library.kicad_sym  RP2350B-DIP40.kicad_pcb  RP2350B-DIP40.kicad_pro  RP2350B-DIP40.kicad_sch  sym-lib-table  tmp.kicad_sym
kicad/Library.pretty/: CONN8_DM3AT-SF-PEJM5_HIR.kicad_mod  Picossci_2B_RP2350B.kicad_mod  Pin_Header-2x20_SMD.kicad_mod  USB_C_Receptacle_Neltron_5077CR-16SMC2.kicad_mod
test/: CMakeLists.txt  blink.c  gpio.c  i2c_rtc.c  i2c_scan.c  pins.c  spi_sd.c  uart_echo.c
